--- a/ClinicaDemo/ClinicaDemo/Views/Home/Index.cshtml
+++ b/ClinicaDemo/ClinicaDemo/Views/Home/Index.cshtml
@@ -1,8 +1,90 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
+   
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+
+<!DOCTYPE html>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<style>
+    body {
+        background-image: url('/images/home.jpg');
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+
+    .carousel-background {
+        position: relative;
+        z-index: 1;
+        width: 80%; /* Adjust as needed */
+        height: 80%; /* Adjust as needed */
+        background-color: rgba(255, 255, 255, 0.8); /* Background color with opacity */
+        padding: 20px; /* Adjust as needed */
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Optional shadow */
+    }
+
+    .button-container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 20%; /* Adjust as needed */
+        height: 100%; /* Make it the same height as the parent */
+        margin-left: 10px; /* Optional margin between carousel and button */
+    }
+</style>
+
+
+<div class="col-md-12">
+    <div class=" col-md-10">
+        <div class="carousel-background">
+            <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
+                <ol class="carousel-indicators">
+                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#myCarousel" data-slide-to="1"></li>
+                    <li data-target="#myCarousel" data-slide-to="2"></li>
+                    <li data-target="#myCarousel" data-slide-to="3"></li>
+                </ol>
+                <div class="carousel-inner" role="listbox">
+                    <div class="item active">
+                        <img src="/images/clinica1.jpg" class="img-responsive" />
+                    </div>
+                    <div class="item">
+                        <img src="/images/clinica2.jpg" class="img-responsive" />
+                    </div>
+                    <div class="item">
+                        <img src="/images/clinica3.jpg" class="img-responsive" />
+                    </div>
+                </div>
+                <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class=" col-md-2">
+        <div class="card">
+            <div class="card-header d-flex justify-content-center">
+                <img src="/images/icono.jfif" style="width: 150px; height: auto;" />
+            </div>
+        </div>
+        <div class="card-body d-flex justify-content-center">
+            <div class="d-grid gap-2 mb-3" style="margin-top: 20px;">
+                <button class="btn btn-info btn-lg" type="button" onclick="location.href='@Url.Action("IniciarSesion", "Login")'">Iniciar Sesión</button>
+            </div>           
+        </div>
+    </div>
 </div>
+
+
+
+
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
